--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,6 +6,7 @@
  		<div class="col-lg-12">
  			<div class="content">
  				<h1>YelpCamp</h1>
+ 				<h1>LINE INCLUDED JUST FOR TEST</h1>
  				<h3>Start planning your next trip today</h3>
  				<hr>
  				<a href="/campgrounds" class="btn btn-default btn-lg"><i class="fa fa-tree"></i> Get Started!</a>
